# ML-Wakad-Weekdays-5-7-pm-11th-Dec

./: pyproject.toml
01_Simple_Linear_Reg/: SLR.ipynb  Simple-Linear-Regression-Practice.ipynb
02_Multiple_Linear_Reg/: MLR-Practice.ipynb  MLR.ipynb
03_Manual_Preprocessing/: Manual-Preprocessing-Practice.ipynb  pre.ipynb
04_Automated_Preprocessing/: Automated-Preprocessing-Practice.ipynb  pre.ipynb
05_Feature_Selection/: Backward Elimination.ipynb  Backward-Feature-Elimination-Practice.ipynb  Forward Feature Selection.ipynb  Forward-Feature-Selection-Practice.ipynb  Fwd-Feature-Selection-Practice.ipynb
06_Regularization/: Ridge-Lasso-Practice.ipynb  Ridge_Lasso.ipynb
07_Logistic Regression/: Logistic-Regression-Practice.ipynb  log_reg.ipynb
08_Decision_Tree_Classification/: DTC-Practice.ipynb  DTC.ipynb
09_Decision_Tree_Regression/: DTR-Practice.ipynb  DTR.ipynb
10 Ensemble/: Ensemble-Practice.ipynb  ensemble.ipynb  loan_model.joblib
11 Algo Evaluation_project/: algo_eval.ipynb  machine_model.joblib
Agentic-AI/: Agentic-AI-Models.ipynb  Agentic-AI.ipynb  Language-Based-AgenticAI-Model.ipynb  Mock-Reinforcement-Learning-AgenticAI-Model.ipynb  Multi-Agents-AgenticAI-Model.ipynb  Planning-Decision-AgenticAI-Model.ipynb
Generative-AI/: Auto-Regressive-Model.ipynb  Bidirectional-Enc-Representations-Frm-Tranfrmers.ipynb  Diffusion-Models.ipynb  FineTuning-LowRank-Adaptation.ipynb  Generative-AI-Tools.ipynb  Generative-Adversarial-Network.ipynb  LLM.ipynb  Reinforce-Learning-From-Human-Feedback.ipynb  Transformers.ipynb  Variational-AutoEncoders.ipynb
(+110 files in other folders)
