[project]
name = "ml-wakad-weekdays-5-7-pm-11th-dec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "gym>=0.26.2",
    "ipykernel>=7.1.0",
    "joblib>=1.5.3",
    "langchain>=1.2.7",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "openai>=2.15.0",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdf2docx>=0.5.8",
    "pdf2image>=1.17.0",
    "pettingzoo>=1.25.0",
    "pillow>=12.0.0",
    "pyrobot>=0.1.0",
    "pytesseract>=0.3.13",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shimmy>=2.0.0",
    "stable-baselines3[extra]>=2.7.1",
    "statsmodels>=0.14.6",
    "xgboost>=3.1.2",
]
